[tool.poetry]
name = "down"
version = "0.1.0"
description = ""
authors = ["Madson Dias <madsonddias@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytube = "^12.1.0"
streamlit = "^1.10.0"
pydantic = "^1.9.1"
streamlit-pydantic = "^0.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
